dox/dev_guides/upgrade/upgrade.md
@@ -1125,10 +1125,10 @@ The following obsolete features have been removed:
 * *AIS_InteractiveObject::SelectionPriority()*.
   These property was not implemented.
 * The class *LocOpe_HBuilder* has been removed as obsolete.
-* The class *QANewBRepNaming_BooleanOperationFeat* has been removed. The class *QANewBRepNaming_BooleanOperation* should be used instead.
 * The package *TestTopOpe* has been removed;
 * The package *TestTopOpeDraw* has been removed;
 * The package *TestTopOpeTools* has been removed.
+* The packages *QANewModTopOpe*, *QANewBRepNaming* and *QANewDBRepNaming* have been removed as containing obsolete features.
 
 @subsection upgrade_occt720_correction_of_Offset_API Corrections in BRepOffset API
 
